--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-nprogress-bar": "^2.4.7",
     "next-seo": "^6.8.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
