--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "15.5.3",
     "next-nprogress-bar": "^2.4.7",
     "next-seo": "^6.8.0",
+    "nprogress": "^0.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
