--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "graphql-request": "^7.2.0",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "^16.0.7",
     "next-nprogress-bar": "^2.4.7",
     "next-seo": "^6.8.0",
     "nprogress": "^0.2.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
